#summary Release Notes

== Release 2.6.2
  * Better visual separation for decision lights

== Release 2.6.1
  * Split the clock button into a separate start and stop button, to facilitate cooperation
    between time keeper and announcer, especially when time is stopped for a weight change.
  * Time keeper can use "Enter" key to start and stop timer without using the mouse
  * Simplified interface for timekeeper console.

== Release 2.6.0
  * Reworked the attempt board for better readability
  * When using wireless tablets for decisions, show the decision to the announcer as a notification
    at the top of the screen. Also show decision reversals.
  * Corrected computation of plate loading so that collars are not used with large thin 2.5kg plates
  
  
== Release 2.5.2
  * Made sure that all decision changes are shown consistently on all displays.
  * Preparation work for supporting audible down signal on multiple platforms.

== Release 2.5.1
  * Marshall shown on weigh-in list (which is used as paper backup)
  * Increased separation between buttons on tablets for jury and referees.

== Release 2.5.0
  * Moved LifterCard generation to JXSL package (and Apache POI) to give end users more control 
    on look&feel

== Release 2.4.1
  * Wait until all referee keypads are blocked to register decision.
  
== Release 2.4.0
  * Fixed Lifter-facing display when referees change their decision.

== Releases 2.3.2 to 2.3.7 ==
  * Many team scoring subtleties for provincial "Jeux du Québec" games
  * Work-around for results not being shown immediately when selecting Results page
  * Fix for category display on result board for youth competitions (e.g. >85) -- fixes regression
    introduced by Masters category display.

== Release 2.3.1 ==
  * Added template for provincial "Jeux du Québec" games scoring system

== Release 2.3.0 ==
  * Jury and Referee decision displays now highlight which person who has not given decision